BOMA-PBL-PROJECT-21-25/project-26-kubernetes-6/jenkins-ingress-2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
  name: jenkins
spec:
  rules:
  - host: "tooling.jenkins.bomatooling.xyz"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins
            port:
              number: 8080
  tls:
  - hosts:
    - "tooling.jenkins.bomatooling.xyz"
    secretName: "tooling.jenkins.bomatooling.xyz"
