BOMA-PBL-PROJECT-21-25/project-26-kubernetes-6/jenkins-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
spec:
  ingressClassName: nginx
  rules:
  - host: "tooling.jenkins.bomatooling.xyz"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins
            port:
              number: 8080
